--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -35,7 +35,7 @@
     <!-- the 6th element indicates boot-time dependency-met value. -->
     <string-array translatable="false" name="networkAttributes">
         <item>"wifi,1,1,2,-1,true"</item>
-        <item>"mobile,0,0,1,-1,"true"</item>
+        <item>"mobile,0,0,1,-1,true"</item>
         <item>"mobile_mms,2,0,2,60000,true"</item>
         <item>"mobile_supl,3,0,2,60000,true"</item>
         <item>"mobile_dun,4,0,5,60000,true"</item>
@@ -49,10 +49,13 @@
 
     <!-- The first element is the package name and the second element is the class name
          of the provisioning app -->
-    <string-array translatable="false" name="config_mobile_hotspot_provision_app">
+    <!--
+	Remove tethering restriction
+    -->
+    <!--string-array translatable="false" name="config_mobile_hotspot_provision_app">
         <item>"com.samsung.spg"</item>
         <item>"com.samsung.spg.NewSPGActivity"</item>
-    </string-array>
+    </string-array-->
 
     <!-- List of file paths for USB host busses to exclude from USB host support.
          For example, if the first USB bus on the device is used to communicate
@@ -62,6 +65,16 @@
     <string-array name="config_usbHostBlacklist">
         <!--  /dev/bus/usb/001 is used for the LTE modem -->
         <item>/dev/bus/usb/001</item>
+    </string-array>
+
+    <!--
+	Enable Google Network Location Services
+    -->
+    <string-array name="config_locationProviderPackageNames" translatable="false">
+        <!-- The standard AOSP fused location provider -->
+        <item>com.android.location.fused</item>
+        <!-- The Google Network Location Services location provider -->
+        <item>com.google.android.location</item>
     </string-array>
 
     <!-- Set to true to add links to Cell Broadcast app from Settings and MMS app. -->
