--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -75,6 +75,8 @@
         <item>com.android.location.fused</item>
         <!-- The Google Network Location Services location provider -->
         <item>com.google.android.location</item>
+        <!-- The Google Location Provider Added in kitkat -->
+        <item>com.google.android.gms</item>
     </string-array>
 
     <!-- Set to true to add links to Cell Broadcast app from Settings and MMS app. -->
